--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,6 @@ lib_deps =
     madhephaestus/ESP32Servo@^3.0.5
 monitor_speed = 115200
 upload_speed = 1500000
+build_flags = 
+    -D ARDUINO_USB_MODE=1
+    -D ARDUINO_USB_CDC_ON_BOOT=1
